--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -16,13 +16,13 @@
   <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
       <div class="container">
-        <a class="navbar-brand mr-4" href="./{{url_for('pat')}}">Patient Portal</a>
+        <a class="navbar-brand mr-4" href="./{{url_for('doct')}}">Doctor Portal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarToggle">
           <div class="navbar-nav mr-auto">
-            <a class="nav-item nav-link" href="./{{url_for('symp')}}">Symptoms</a>
+            <a class="nav-item nav-link" href="./{{url_for('symp')}}">Appointments</a>
           </div>
         </div>
       </div>
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-md-8">
         <h1>Welcome</h1>
-        <p>Please select the Symptoms tab above.</p> {% block content %}{% endblock %}
+        <p>Please select the Appointments tab above.</p> {% block content %}{% endblock %}
       </div>
     </div>
   </main>
