--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="./{{url_for('login')}}">Log In</a>
             <a class="nav-item nav-link" href="./{{url_for('recommend')}}">Recommend</a>
+            <a class="nav-item nav-link" href="./{{url_for('index')}}">Recommend</a>
           </div>
         </div>
       </div>
